--- a/client/src/Pages/SignupPage/SignupPage.css
+++ b/client/src/Pages/SignupPage/SignupPage.css
@@ -15,29 +15,27 @@
   margin-top: 90px;
   display: flex;
   flex-direction: column;
-  /* justify-content: space-between; */
+  justify-content: space-evenly;
   height: 650px;
   align-items: center;
   color: white;
 }
 
 .signupFormContainer img {
-  margin-top: 70px;
   margin-bottom: 40px;
   width: 350px;
 }
 
-.formStyling {
+.signFormStyling {
   /* border: 2px solid red; */
-  height: 250px;
+  height: 300px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* justify-content: space-between; */
+  justify-content: space-between;
 }
 
-.formItem input {
-  margin-left: 10px;
+.signFormItem input {
   background-color: #fafafa;
   font-size: 15px;
   border-radius: 4px;
@@ -47,15 +45,16 @@
   padding-left: 10px;
 }
 
-.formItem h6 {
+.signFormItem h6 {
   color: red;
   margin: 0px 0px 10px 2px;
 }
 
 .logIn {
   font-size: 15px;
-  margin-bottom: 40px;
+  /* margin-bottom: 40px; */
   display: flex;
+  align-items: center;
   justify-content: center;
 }
 
